# spatial_utils

./: LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
spatial_utils/: __init__.py  __version__.py  ahn_utils.py  bathymetry_utils.py
tests/: test_ahn.py  test_bathymetry_utils.py
tests/test_input/bathymetry_data/: clipped_grey.tif
