[metadata]
name = spatial_utils
version = attr: spatial_utils.__version__
author = attr: spatial_utils.__author__
description = Spatial utils of the datafusiontools package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages =
    spatial_utils
include_package_data = True
install_requires =
    numpy>=1.22
    matplotlib>=3.5
    requests>=2.27
    rasterio>=1.2
    shapely>=1.8
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    pyshp>=2.3.1
    core @ git+https://github.com/DataFusionTools/core
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
